--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <i class='bx bx-gift' ></i>
 <i class='bx bx-purchase-tag-alt' ></i>
 <i class='bx bx-bookmark-alt-minus' ></i>
-<i class='bx bx-headphone'></i> -->
+<i class='bx bx-headphone'></i>
+
+<i class="fas fa-rupee-sign"></i>
+
+ -->
 <!DOCTYPE html>
 <html>
 <head>
@@ -140,7 +144,7 @@
 <div class="container4">
 	    <div class="bg4"><a href="cart.html"><img src="image/brand2.jpg"></a><h5>Men's</h5>
 	    <div class="txt">
-        <span class="span-3 lowerpb">Rs.300</span>
+        <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a lowerpb">Buy</a>
         <div class="stars">
         <i class="fas fa-star"></i>
@@ -152,7 +156,7 @@
 	    </div>
 		<div class="bg4"><a href="#"><img src="image/product-6.jpg"></a><h5>Girl's</h5>
 			 <div class="txt">
-		 <span class="span-3 lowerpb">Rs.300</span>
+		 <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
         <div class="stars">
@@ -165,7 +169,7 @@
        </div>
 		<div class="bg4"><a href="#"><img src="image/product-4.jpg"></a><h5>Jaket's</h5>
 			 <div class="txt"> 
-        <span class="span-3 lowerpb">Rs.300</span>
+        <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -177,7 +181,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/jaket2.jpg"></a><h5>Watche's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -190,7 +194,7 @@
        </div>
 		<div class="bg4"><a href="#"><img src="image/product-3.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -203,7 +207,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/mens's1.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -217,7 +221,7 @@
 		</div>
         <div class="bg4"><a href="#"><img src="image/tshirt1.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -231,7 +235,7 @@
 
         <div class="bg4"><a href="#"><img src="image/boy.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-          <span class="span-3 lowerpb">Rs.300</span>
+          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -251,7 +255,7 @@
 
 		<div class="bg4"><a href="#"><img src="image/girl kurti6.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -264,7 +268,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/brand8.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -276,7 +280,7 @@
 		</div>
         <div class="bg4"><a href="#"><img src="image/girl top6.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -288,7 +292,7 @@
         </div>
         <div class="bg4"><a href="#"><img src="image/girl kurti1.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-          <span class="span-3 lowerpb">Rs.300</span>
+          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -307,7 +311,7 @@
 
 		<div class="bg4"><a href="#"><img src="image/camera.jpg"></a><h5>Shoe's</h5>
 		<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -319,7 +323,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/shoe.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -331,7 +335,7 @@
 		</div>
         <div class="bg4"><a href="#"><img src="image/headphone.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-         <span class="span-3 lowerpb">Rs.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -344,7 +348,7 @@
 
         <div class="bg4"><a href="#"><img src="image/shoe4.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-          <span class="span-3 lowerpb">Rs.300</span>
+          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
