--- a/Get more.html
+++ b/Get more.html
@@ -45,7 +45,7 @@
 		<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -63,7 +63,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -79,7 +79,7 @@
 
           <h5>T-Shirt</h5>
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -96,7 +96,7 @@
         <h5>T-Shirt</h5>
 
 	<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.299</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -115,7 +115,7 @@
 	<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -131,7 +131,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -148,7 +148,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.299</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -165,7 +165,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
