--- a/Product.html
+++ b/Product.html
@@ -50,7 +50,7 @@
 		<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -67,7 +67,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -83,7 +83,7 @@
 
           <h5>T-Shirt</h5>
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -100,7 +100,7 @@
         <h5>T-Shirt</h5>
 
 	<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -119,7 +119,7 @@
 	<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -135,7 +135,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -152,7 +152,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -168,7 +168,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -190,7 +190,7 @@
 		<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -207,7 +207,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -222,7 +222,7 @@
 
           <h5>T-Shirt</h5>
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -239,7 +239,7 @@
         <h5>T-Shirt</h5>
 
 	<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -258,7 +258,7 @@
 	<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -274,7 +274,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -291,7 +291,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -307,7 +307,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -331,7 +331,7 @@
 	<h5>Shoe</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -347,7 +347,7 @@
 		<h5>Shoe</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -363,7 +363,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -380,7 +380,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 299</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -402,7 +402,7 @@
 		<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -419,7 +419,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -435,7 +435,7 @@
 
           <h5>T-Shirt</h5>
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -452,7 +452,7 @@
         <h5>T-Shirt</h5>
 
 	<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -473,7 +473,7 @@
 		<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -490,7 +490,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -506,7 +506,7 @@
 
           <h5>T-Shirt</h5>
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -523,7 +523,7 @@
         <h5>T-Shirt</h5>
 
 	<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>. 300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
