--- a/get more2.html
+++ b/get more2.html
@@ -45,7 +45,7 @@
 		<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -62,7 +62,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="cart.html" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -77,7 +77,7 @@
 
           <h5>T-Shirt</h5>
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -93,7 +93,7 @@
         <h5>T-Shirt</h5>
 
 	<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -112,7 +112,7 @@
 	<h5>T-Shirt</h5>
 
 		<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -128,7 +128,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -145,7 +145,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -162,7 +162,7 @@
 		<h5>T-Shirt</h5>
 
 			<div class="txt">
-         <span class="span-3">Rs.300</span>
+         <span class="span-3"><i class="fas fa-rupee-sign"></i>.300</span>
         <a href="#" class="btn-a">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
