--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <div class="container4">
 	    <div class="bg4"><a href="cart.html"><img src="image/brand2.jpg"></a><h5>Men's</h5>
 	    <div class="txt">
-        <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+        <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="cart.html" class="btn-a lowerpb">Buy</a>
         <div class="stars">
         <i class="fas fa-star"></i>
@@ -156,7 +156,7 @@
 	    </div>
 		<div class="bg4"><a href="#"><img src="image/product-6.jpg"></a><h5>Girl's</h5>
 			 <div class="txt">
-		 <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+		 <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
         <div class="stars">
@@ -169,7 +169,7 @@
        </div>
 		<div class="bg4"><a href="#"><img src="image/product-4.jpg"></a><h5>Jaket's</h5>
 			 <div class="txt"> 
-        <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+        <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
         <div class="stars">
          <i class="fas fa-star"></i>
@@ -181,7 +181,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/jaket2.jpg"></a><h5>Watche's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -194,7 +194,7 @@
        </div>
 		<div class="bg4"><a href="#"><img src="image/product-3.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -207,7 +207,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/mens's1.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -221,7 +221,7 @@
 		</div>
         <div class="bg4"><a href="#"><img src="image/tshirt1.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -235,7 +235,7 @@
 
         <div class="bg4"><a href="#"><img src="image/boy.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -255,7 +255,7 @@
 
 		<div class="bg4"><a href="#"><img src="image/girl kurti6.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
 
          <div class="stars">
@@ -268,7 +268,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/brand8.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -280,7 +280,7 @@
 		</div>
         <div class="bg4"><a href="#"><img src="image/girl top6.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -292,7 +292,7 @@
         </div>
         <div class="bg4"><a href="#"><img src="image/girl kurti1.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -311,7 +311,7 @@
 
 		<div class="bg4"><a href="#"><img src="image/camera.jpg"></a><h5>Shoe's</h5>
 		<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -323,7 +323,7 @@
 		</div>
 		<div class="bg4"><a href="#"><img src="image/shoe.jpg"></a><h5>Shoe's</h5>
 			<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -335,7 +335,7 @@
 		</div>
         <div class="bg4"><a href="#"><img src="image/headphone.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+         <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -348,7 +348,7 @@
 
         <div class="bg4"><a href="#"><img src="image/shoe4.jpg"></a><h5>Shoe's</h5>
         	<div class="txt">
-          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i>.300</span>
+          <span class="span-3 lowerpb"><i class="fas fa-rupee-sign"></i> 300</span>
         <a href="#" class="btn-a lowerpb">Buy</a>
          <div class="stars">
          <i class="fas fa-star"></i>
@@ -398,44 +398,44 @@
 			<div class="links">
 			<h6><span class="span-8">Link</span>shortcut</h6>
 				<ul class="footer-ul-1">
-				<li class="footer-li"><a href="shop.html" id="footer-a">Home</a></li>
-				<li><a href="Product.html" id="footer-a">Product</a></li>
+				<li class="footer-li all-li"><a href="shop.html" id="footer-a">Home</a></li>
+				<li class="all-li"><a href="Product.html" id="footer-a">Product</a></li>
 					   <ul class="footer-ul-2">
 
-                        <li><a href="Get more.html" id="footer-a">Men's"</a></li>
-                        <li><a href="get more2.html" id="footer-a">Girl's</a></li>
-                        <li><a href="#" id="footer-a">Shoe's</a></li>
+                        <li  class="all-li"><a href="Get more.html" id="footer-a">Men's"</a></li>
+                        <li  class="all-li"><a href="get more2.html" id="footer-a">Girl's</a></li>
+                        <li  class="all-li"><a href="#" id="footer-a">Shoe's</a></li>
 
                     </ul>
 				</li>
-				<li><a href="#" id="footer-a">About</a></li>
-				<li><a href="#" id="footer-a">Help</a></li>
+				<li  class="all-li"><a href="#" id="footer-a">About</a></li>
+				<li  class="all-li"><a href="#" id="footer-a">Help</a></li>
 			</ul>
 			</div>
 
 		<div class="social links">
 		    <h6><span class="span-8">Social</span>link's</h6>
-		    <div class="face-book">
+		    <div class="face-book all-li">
 			<a href="#" id="footer-a">
 				<i class="fab fa-facebook-f"></i>
 				Facebook</a>
 			</div>
-			<div class="inta-gram">
+			<div class="inta-gram all-li">
        	    <a href="#" id="footer-a"><i class="fab fa-instagram"></i> Instagram</a>
        	    </div>
-       	    <div class="twi-ter">
+       	    <div class="twi-ter all-li">
        	    <a href="#" id="footer-a"><i class="fab fa-twitter"></i> Twitter</a>
        	    </div>
          </div>
 
-        <div class="contact links">
-		<h6><span class="span-8">Cont</span>act</h6>
-    <div class="footer-addres color-txt"><i class="fas fa-address-card"></i> Rattan Galaxy NaviMumbai(422040)</div>
-            <div class="footer-phone color-txt"><i class="fas fa-phone"></i> 1454(25)88</div>
-            <div class="footer-email  color-txt"><i class="fas fa-at"></i> asd@gmail.com</div>
+        <div class="contact links fas-con">
+		<h6><span class="span-8 ">Cont</span>act</h6>
+    <div class="footer-addres color-txt all-li"><i class="fas fa-address-card"></i> Rattan Galaxy NaviMumbai(422040)</div>
+            <div class="footer-phone color-txt all-li"><i class="fas fa-phone"></i> 1454(25)88</div>
+            <div class="footer-email  color-txt all-li"><i class="fas fa-at"></i> asd@gmail.com</div>
        </div>
 
-       <div class="facility">
+       <div class="facility fas-con">
        <h6><span class="span-8">Faci</span>lity</h6>
        	    <div class="facili color-txt">
                   <div class="i-cc">
@@ -472,7 +472,7 @@
        	</div> 
        </div>
         
-        <div class="map">
+        <div class="map fas-con">
         <h6><span class="span-8">Loca</span>tion</h6>
         <div class="location">
         	<div class="i-cc">
