--- a/get more2.html
+++ b/get more2.html
@@ -218,95 +218,94 @@
 
 	<h4><span class="span-7">Fashion</span></h4>
 	<div class="footer-txt">
-			<div class="links">
-			<h6><span class="span-8">Link</span>shortcut</h6>
-				<ul class="footer-ul-1">
-				<li class="footer-li"><a href="index.html" id="footer-a">Home</a></li>
-				<li><a href="Product.html" id="footer-a">Product</a></li>
-					   <ul class="footer-ul-2">
+   <div class="links">
+     <h6><span class="span-8">Link</span>shortcut</h6>
+     <ul class="footer-ul-1">
+      <li class="footer-li all-li"><a href="index.html" id="footer-a">Home</a></li>
+      <li class="all-li"><a href="Product.html" id="footer-a">Product</a></li>
+      <ul class="footer-ul-2">
 
-                        <li><a href="Get more.html" id="footer-a">Men's"</a></li>
-                        <li><a href="get more2.html" id="footer-a">Girl's</a></li>
-                        <li><a href="#" id="footer-a">Shoe's</a></li>
+        <li  class="all-li"><a href="Get more.html" id="footer-a">Men's"</a></li>
+        <li  class="all-li"><a href="get more2.html" id="footer-a">Girl's</a></li>
+        <li  class="all-li"><a href="#" id="footer-a">Shoe's</a></li>
 
-                    </ul>
-				</li>
-				<li><a href="#" id="footer-a">About</a></li>
-				<li><a href="#" id="footer-a">Help</a></li>
-			</ul>
-			</div>
+      </ul>
+    </li>
+    <li  class="all-li"><a href="#" id="footer-a">About</a></li>
+    <li  class="all-li"><a href="#" id="footer-a">Help</a></li>
+  </ul>
+</div>
 
-		<div class="social links">
-		    <h6><span class="span-8">Social</span>link's</h6>
-		    <div class="face-book">
-			<a href="#" id="footer-a">
-				<i class="fab fa-facebook-f"></i>
-				<span>Face</span>book</a>
-			</div>
-			<div class="inta-gram">
-       	    <a href="#" id="footer-a"><i class="fab fa-instagram"></i> <span>Insta</span>gram</a>
-       	    </div>
-       	    <div class="twi-ter">
-       	    <a href="#" id="footer-a"><i class="fab fa-twitter"></i> <span>Twit</span>ter</a>
-       	    </div>
-         </div>
+<div class="social links">
+  <h6><span class="span-8">Social</span>link's</h6>
+  <div class="face-book all-li">
+   <a href="#" id="footer-a">
+    <i class="fab fa-facebook-f"></i>
+  Facebook</a>
+</div>
+<div class="inta-gram all-li">
+  <a href="#" id="footer-a"><i class="fab fa-instagram"></i> Instagram</a>
+</div>
+<div class="twi-ter all-li">
+  <a href="#" id="footer-a"><i class="fab fa-twitter"></i> Twitter</a>
+</div>
+</div>
 
-        <div class="contact links">
-		<h6><span class="span-8">Cont</span>act</h6>
-    <div class="footer-addres color-txt"><i class="fas fa-address-card"></i> Rattan Galaxy NaviMumbai(422040)</div>
-            <div class="footer-phone color-txt"><i class="fas fa-phone"></i> 1454(25)88</div>
-            <div class="footer-email  color-txt"><i class="fas fa-at"></i> asd@gmail.com</div>
-       </div>
+<div class="contact links fas-con">
+  <h6><span class="span-8 ">Cont</span>act</h6>
+  <div class="footer-addres color-txt all-li"><i class="fas fa-address-card"></i> Rattan Galaxy NaviMumbai(422040)</div>
+  <div class="footer-phone color-txt all-li"><i class="fas fa-phone"></i> 1454(25)88</div>
+  <div class="footer-email  color-txt all-li"><i class="fas fa-at"></i> asd@gmail.com</div>
+</div>
 
-       <div class="facility">
-       <h6><span class="span-8">Faci</span>lity</h6>
-       	    <div class="facili color-txt">
-                  <div class="i-cc">
-       	    	<i class='bx bx-purchase-tag-alt'></i>
-                     </div>
-       	    Low Price</div> 
-       	     <div class="facili color-txt">
-       	     	<div class="i-cc">
-       	     	<i class="fas fa-undo"></i>
-                 </div>
-       	     7-DayReturn</div> 
-       	    <div class="facili color-txt">
-       	    	<div class="i-cc">
-       	    	<i class="fas fa-truck"></i>
-       	    	</div>
-       	    FreeDelivery
-       	</div> 
-       	    <div class="facili color-txt">
-       	    	<div class="i-cc">
-       	    	<i class='bx bx-bookmark-alt-minus'></i>
-       	    	</div>
-       	    PrivacyPolicy
-       	</div> 
-       	    <div class="facili color-txt">
-               <div class="i-cc">
-       	    	<i class='bx bx-headphone'></i>
-               </div>
-       	    24/7Support</div> 
-       	    <div class="facili color-txt">
-                 <div class="i-cc">
-       	    	<i class='bx bx-gift'></i> 
-                </div>
-       	    Security
-       	</div> 
-       </div>
-        
-        <div class="map">
-        <h6><span class="span-8">Loca</span>tion</h6>
-        <div class="location">
-        	<div class="i-cc">
-        	<i class="fas fa-location"></i>
-        	</div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241316.6433245963!2d72.74109852168137!3d19.08252232266246!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c6306644edc1%3A0x5da4ed8f8d648c69!2sMumbai%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1639994761239!5m2!1sen!2sin" width="120" height="130" style="border:0;" allowfullscreen="" loading="lazy"></iframe>        	
-        </div>
-       </div>
-	</div>
+<div class="facility fas-con">
+ <h6><span class="span-8">Faci</span>lity</h6>
+ <div class="facili color-txt">
+  <div class="i-cc">
+   <i class='bx bx-purchase-tag-alt'></i>
+ </div>
+Low Price</div> 
+<div class="facili color-txt">
+  <div class="i-cc">
+    <i class="fas fa-undo"></i>
+  </div>
+7-DayReturn</div> 
+<div class="facili color-txt">
+ <div class="i-cc">
+   <i class="fas fa-truck"></i>
+ </div>
+ FreeDelivery
+</div> 
+<div class="facili color-txt">
+ <div class="i-cc">
+   <i class='bx bx-bookmark-alt-minus'></i>
+ </div>
+ PrivacyPolicy
+</div> 
+<div class="facili color-txt">
+ <div class="i-cc">
+   <i class='bx bx-headphone'></i>
+ </div>
+24/7Support</div> 
+<div class="facili color-txt">
+ <div class="i-cc">
+   <i class='bx bx-gift'></i> 
+ </div>
+ Security
+</div> 
+</div>
 
-
+<div class="map fas-con">
+  <h6><span class="span-8">Loca</span>tion</h6>
+  <div class="location">
+   <div class="i-cc">
+     <i class="fas fa-location"></i>
+   </div>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15079.452041717466!2d72.86097912347769!3d19.113664717895418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c83c05b7fc89%3A0xbe87eb057f3aafda!2sAndheri%2C%20Maharashtra%20400053!5e0!3m2!1sen!2sin!4v1640418276497!5m2!1sen!2sin" width="100" height="130" style="border:0;" allowfullscreen="" loading="lazy"></iframe>      	
+ </div>
+</div>
+</div>
+</footer>
  
 
 
